@@ -197,6 +197,9 @@ https://github.com/networkupstools/nut/milestone/11
      CP1350EPFCLCD model, including temperature. [PRs #2540, #2711]
    * loudly suggest to set `pollonly` flag and default a shorter `pollfreq`
      for CPS devices, to try avoiding device-driven timeouts. [#1689]
+     Also adjust default `offdelay` and `ondelay` to reasonable values,
+     and warn the users with CPS devices if their configured values are
+     not multiples of 60. [#432, #1394]
    * USB parameters (per `usb_communication_subdriver_t`) are now set back to
      their default values during enumeration after probing each subdriver.
      Having an unrelated device connected with a VID:PID matching the
